# webapp

./: .env.development  .env.production  .env.serve  .env.staging  .env.test  .eslintrc.cjs  .gitignore  .gitlab-ci.yml  .prettierrc.json  BREADCRUMB.md  CLAUDE.md  README.md  Untitled  env.d.ts  eslint.config.js  index.html  missing.md  package-lock.json  package.json  parseTx.js  protocols  tailwind.config.cjs  tailwind.config.js  tes.json  test.js  test_cron_git.txt  todo.md  tsconfig.app.json  tsconfig.config.json  tsconfig.json  tsconfig.node.json  version.sh  vite.config.ts  vitest.config.ts  vue.config.js
.github/workflows/: deploy-dev.yaml  deploy-prod.yaml  deploy.yaml  e2e-nightly.yaml  e2e-regression.yaml  e2e-t3-engine.yaml  e2e-t3-flows.yaml  lint.yaml  pr-validate.yaml
.husky/: pre-commit
accounts/config/: config.toml
backend/: .env.example  Cargo.toml  clippy.toml  openapi.snapshot.json
backend/benches/: benchmarks.rs
backend/config/: audit-log.json  chain-ids.json  currencies.json  history-currencies.json  networks.json
backend/config/endpoints/: evm.json  rila.json
backend/config/gated/: currency-display.json  lease-rules.json  network-config.json  swap-settings.json  ui-settings.json
backend/config/governance/: hidden-proposals.json
backend/config/lease/: downpayment-ranges.json  due-projection-secs.json  ignore-assets.json  ignore-lease-long-assets.json
backend/config/locales/: audit.json  cn.json  en.json  es.json  fr.json  gr.json  id.json  jp.json  kr.json  languages.json  pending.json  ru.json  tr.json
backend/config/locales/active/: cn.json  en.json  es.json  fr.json  gr.json  id.json  jp.json  kr.json  ru.json  tr.json
backend/config/swap/: skip-route-config.json
backend/config/zero-interest/: payment-addresses.json
backend/migrations/: 001_initial_schema.sql
backend/scripts/: style-check.sh
backend/src/: cache.rs  cache_keys.rs  chain_events.rs  config.rs  data_cache.rs  error.rs  etl_macros.rs  http_utils.rs  main.rs  num_utils.rs  query_types.rs  refresh.rs  response_types.rs  test_utils.rs  validation.rs
backend/src/config_store/: gated_types.rs  mod.rs  storage.rs  types.rs
backend/src/db/: asset_restrictions.rs  currency_display.rs  lease_rules.rs  mod.rs  models.rs  network_config.rs  protocol_status.rs  swap_config.rs  ui_settings.rs
backend/src/handlers/: admin.rs  admin_config.rs  admin_propagation.rs  common_types.rs  config.rs  currencies.rs  earn.rs  etl_proxy.rs  etl_types.rs  fees.rs  gated_admin.rs  gated_assets.rs  gated_networks.rs  gated_protocols.rs  governance.rs  leases.rs  locales.rs  mod.rs  openapi.rs  protocols.rs  referral.rs  solana.rs  solana_tx.rs  spa.rs  staking.rs  swap.rs  transactions.rs  transfer.rs  translations.rs  webapp_config.rs  websocket.rs  zero_interest.rs
backend/src/middleware/: admin_auth.rs  cache_control.rs  mod.rs  rate_limit.rs
backend/src/middleware/cache_control/: durations.rs
backend/src/models/: currency.rs  earn.rs  lease.rs  mod.rs  staking.rs  transaction.rs
backend/src/propagation/: filter.rs  merger.rs  mod.rs  user_data_filter.rs  validator.rs
backend/src/transfer_tracker/: mod.rs  store.rs
backend/src/translations/: audit.rs  llm.rs  mod.rs  openai.rs  storage.rs  types.rs  validation.rs
docs/: api.md  backend api enrichments and proxy.md  data_flows.md  protocol architecture.md  translations.md
e2e/: .gitignore  .prettierignore  README.md  coverage-matrix.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
e2e/scripts/: check-matrix.ts
e2e/src/: broadcast.ts  config.test.ts  config.ts  decimal.test.ts  decimal.ts  http.ts  report.test.ts  report.ts  resolver.test.ts  resolver.ts  signer.test.ts  signer.ts  t0.ts  transfer.test.ts  transfer.ts  types.ts  validate.test.ts  validate.ts  ws.test.ts  ws.ts
fixtures/common/: config.json  currencies.json  earn-pools.json  earn-stats.json  etl-batch-loans-stats.json  etl-batch-stats-overview.json  etl-leased-assets.json  etl-pools.json  etl-supplied-funds.json  fees-gas-config.json  governance-apr.json  locales-en.json  networks-gated.json  networks-osmosis-assets.json  node-info.json  prices.json  protocols-gated.json  protocols-osmosis-all-btc-currencies.json  protocols-osmosis-osmo-currencies.json  protocols-osmosis-usdc-noble-currencies.json  staking-params.json  staking-validators.json
fixtures/schemas/: balances-response.json  earn-pool.json  earn-positions-response.json  gas-fee-config-response.json  lease-info.json  leases-response.json  prices-response.json  proposals-response.json  skip-route-config.json  staking-positions-response.json
fixtures/wallet/: balances-huge.json  balances-zero.json  balances.json  earn-positions.json  etl-batch-user-dashboard.json  lease-single.json  leases.json  staking-positions.json
languages/: add.json  language.js  parse.js  remove.json
modules/: process.js
public/: currencies_rila.json  manifest.json  rila-endpoints.json  robots.txt
public/.well-known/: agent-card.json  agent.json  api-catalog  mcp.json
public/locales/: cn.json  ru.json
public/networks/: rila-endpoints.json
scripts/: gen-fixture-schemas.ts  ts-style-check.sh  tsconfig.json
server/: index.js  shim.js
src/: App.vue  entry-client.ts  entry-server.ts  i18n.ts  index.css  index.scss  main.ts  polyfills.ts
src/client/: NolusClient.ts
src/components/: AssetPartial.vue  BannerComponent.vue  CurrencyComponent.vue  CurrencyField.vue  CurrencyPicker.vue  DashboardDaughnutChart.vue  EarnAsset.vue  InputField.vue  LeaseFormComponent.vue  LeaseInfo.vue  LeaseMainComponent.vue  LogoLink.vue  MultipleCurrencyField.vue  Notifications.vue  Picker.vue  PickerCombo.vue  PickerDefault.vue  PickerIcon.vue  RadioInput.vue  RangeComponent.vue  ReceiveComponent.vue  ReceiveMainComponent.vue  ReceiveQrCodeComponent.vue  SelectorTextField.vue  SendComponent.vue  SendMainComponent.vue  SendingConfirmComponent.vue  SendingFailedComponent.vue  SendingSuccessComponent.vue  SidebarContainer.vue  SidebarElement.vue  SidebarSocial.vue  (+13 more)
(+1202 files in other folders)
