[package]
name = "nolus-backend"
version = "0.1.0"
edition = "2021"
authors = ["Nolus Protocol"]
description = "Backend server for Nolus webapp"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# URL encoding
urlencoding = "2.1"

# Configuration
dotenvy = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# Caching
arc-swap = "1"
mini-moka = "0.10"

# Concurrent HashMap for WebSocket connections
dashmap = "6"

# Cryptography (for Intercom JWT, address validation)
bech32 = "0.11"
jsonwebtoken = "9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# Rate limiting
governor = "0.6"

# Cosmos SDK types (for transaction building)
cosmrs = { version = "0.16", features = ["cosmwasm"] }
base64 = "0.22"
prost = "0.12"

# Regex for placeholder validation (translations)
regex = "1"
lazy_static = "1"

# WebSocket client for CometBFT event subscriptions
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# OpenAPI spec generation
utoipa = { version = "5", features = ["axum_extras", "chrono", "preserve_order"] }

[dev-dependencies]
futures = "0.3"
http-body-util = "0.1"
tempfile = "3.10"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
