[package]
name = "nolus-backend"
version = "0.1.0"
edition = "2021"
authors = ["Nolus Protocol"]
description = "Backend server for Nolus webapp"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# URL encoding
urlencoding = "2.1"

# Configuration
dotenvy = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# Caching
arc-swap = "1"
mini-moka = "0.10"

# Concurrent HashMap for WebSocket connections
dashmap = "6"

# Cryptography (for Intercom JWT, address validation)
bech32 = "0.11"
jsonwebtoken = "9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# Rate limiting
governor = "0.6"

# Cosmos SDK types (for transaction building)
cosmrs = { version = "0.16", features = ["cosmwasm"] }
base64 = "0.22"
prost = "0.12"

# Solana IBC SDK: PDA/ATA derivation, instruction builders, packet-PDA
# decoders. Pinned by commit rev (upstream cuts no semver tags); `sdk` feature
# only — `engine-jupiter` would pull `remote_lease_wire`, whose rustc >= 1.94
# floor conflicts with Solana's bundled BPF toolchain and which the webapp
# never touches (relayer-gated path).
ibc-solray = { git = "https://github.com/nolus-protocol/ibc-solray", rev = "0462fb326b9b2b4d51b831c729893cc86192518f", default-features = false, features = ["sdk"] }

# Solana public-key type: base58/ed25519-pubkey validation and PDA derivation.
# Version pinned to match the one `ibc-solray` resolves so their `Pubkey` types
# unify.
solana-pubkey = "4"

# Regex for placeholder validation (translations)
regex = "1"
lazy_static = "1"

# WebSocket client for CometBFT event subscriptions
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# OpenAPI spec generation
utoipa = { version = "5", features = ["axum_extras", "chrono", "preserve_order"] }

[dev-dependencies]
futures = "0.3"
http-body-util = "0.1"
tempfile = "3.10"
# `test-util` (clock pause/advance) is excluded from tokio's `full` feature;
# enable it for tests only so it never reaches the release binary.
tokio = { version = "1", features = ["test-util"] }
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.clippy]
as_conversions = "deny"
too_many_lines = { level = "warn", priority = -1 }
cognitive_complexity = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
missing_const_for_fn = { level = "warn", priority = -1 }
redundant_pub_crate = "deny"
single_char_lifetime_names = "warn"
